updated with presentations

--- a/Keywords_tvSeries.ipynb
+++ b/Keywords_tvSeries.ipynb
@@ -319,18 +319,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(1000, 10)"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'top_1000_movies' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/84/zy4ybqrs7ybcqt8x9dg4gtlh0000gn/T/ipykernel_22515/481461201.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtop_1000_movies\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'top_1000_movies' is not defined"
+     ]
     }
    ],
    "source": [
@@ -402,75 +403,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>keywords</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>tconst</th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>tt0944947</th>\n",
-       "      <td>based-on-novel,dragon,politics,nudity,incest,q...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>tt0903747</th>\n",
-       "      <td>cancer,chemistry,methamphetamine,albuquerque-n...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>tt4574334</th>\n",
-       "      <td>government-conspiracy,1980s,friendship,telekin...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>tt1520211</th>\n",
-       "      <td>zombie,survival,post-apocalypse,based-on-comic...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>tt0108778</th>\n",
-       "      <td>friendship,friend,new-york-city,roommate,divor...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                                    keywords\n",
-       "tconst                                                      \n",
-       "tt0944947  based-on-novel,dragon,politics,nudity,incest,q...\n",
-       "tt0903747  cancer,chemistry,methamphetamine,albuquerque-n...\n",
-       "tt4574334  government-conspiracy,1980s,friendship,telekin...\n",
-       "tt1520211  zombie,survival,post-apocalypse,based-on-comic...\n",
-       "tt0108778  friendship,friend,new-york-city,roommate,divor..."
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'keywords' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/84/zy4ybqrs7ybcqt8x9dg4gtlh0000gn/T/ipykernel_22515/120991420.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mkeywords\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'keywords' is not defined"
+     ]
     }
    ],
    "source": [
